@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-25T08:11:26Z",
-  "count_outdated" : 5733,
-  "uniques_outdated" : 1934,
+  "timestamp" : "2023-11-25T16:11:13Z",
+  "count_outdated" : 5735,
+  "uniques_outdated" : 1935,
   "count" : 5847,
   "uniques" : 2021,
   "clones" : [
-    {
-      "timestamp": "2023-11-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-11-12T00:00:00Z",
       "count": 1,
