@@ -1,12 +1,7 @@
 {
-  "count": 113,
+  "count": 112,
   "uniques": 72,
   "clones": [
-    {
-      "timestamp": "2023-11-11T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-11-12T00:00:00Z",
       "count": 1,
