@@ -1,3 +1,12 @@
+2023-11-25T16:11:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6990110760 # 2110
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-25
+* notice: last 14d: unq all: 72 112
+* notice: prev accum: outdated-unq outdated-all / unq all: 1934 5733 / 2021 5847
+* notice: next accum: outdated-unq outdated-all / unq all: 1935 5735 / 2021 5847
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-11-11] / []
+
 2023-11-25T08:11:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6987949699 # 2109
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-25
